# hepatica-p

./: .gitignore  Makefile  README.md  TESTING.md
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_auth_sessions.py  0003_stage3_monitoring.py  README.md
backend/app/: README.md  main.py
backend/app/api/: README.md  deps.py
backend/app/core/: README.md  config.py  enums.py  rate_limit.py  security.py  startup_guardrails.py
backend/app/db/: README.md  __init__.py  base.py  init_db.py  models.py  session.py  types.py
backend/app/schemas/: README.md  assessment.py  assistant.py  auth.py  knowledge.py  model_status.py  patient.py  report.py  stage3.py  timeline.py
backend/app/services/: README.md  antivirus.py  assistant_chat.py  audit.py  auth_session.py  dicom.py  (+14 more)
backend/scripts/: README.md  __init__.py  export_openapi.py  generate_synthetic_clinical_dataset.py  ingest_journals.py  model_registry.py  run_stage3_monitoring.py  smoke_evidence.py  smoke_flow.py
backend/tests/: README.md  conftest.py  test_api_contract.py  test_assistant_api_contract.py  test_auth_firebase.py  test_local_upload_and_pdf.py  test_local_upload_security.py  test_ml_runtime_integration.py  test_model_registry_admin.py  test_model_registry_seed.py  test_patients_list.py  test_stage1.py  test_stage2_quality_gate.py  test_stage3_api_contract.py  test_stage3_synthetic_dataset.py  test_startup_guardrails.py  test_synthetic_dataset.py
(+115 files in other folders)
