[project]
name = "hepatica-backend"
version = "0.1.0"
description = "Hepatica clinical and fibrosis backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
